--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,5 +34,5 @@ jobs:
     
     - name: Check code quality
       run: |
-        python -m py_compile feesentinel/*.py
+        python -m compileall feesentinel
 
